graalvm jit: jlink minimal runtime on debian-slim